; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_send.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.httpd_req_aux* }
%struct.httpd_req_aux = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (i32, i32, i8*, i64, i32)*, i32, i32 }

@HTTPD_SOCK_ERR_INVALID = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"error in send_fn\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @httpd_send(%struct.TYPE_6__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.httpd_req_aux*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = icmp eq %struct.TYPE_6__* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %12, %3
  %16 = load i32, i32* @HTTPD_SOCK_ERR_INVALID, align 4
  store i32 %16, i32* %4, align 4
  br label %54

17:                                               ; preds = %12
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %19 = call i32 @httpd_valid_req(%struct.TYPE_6__* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* @HTTPD_SOCK_ERR_INVALID, align 4
  store i32 %22, i32* %4, align 4
  br label %54

23:                                               ; preds = %17
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %25, align 8
  store %struct.httpd_req_aux* %26, %struct.httpd_req_aux** %8, align 8
  %27 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %8, align 8
  %28 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %27, i32 0, i32 0
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32 (i32, i32, i8*, i64, i32)*, i32 (i32, i32, i8*, i64, i32)** %30, align 8
  %32 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %8, align 8
  %33 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %32, i32 0, i32 0
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %8, align 8
  %38 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %37, i32 0, i32 0
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load i64, i64* %7, align 8
  %44 = call i32 %31(i32 %36, i32 %41, i8* %42, i64 %43, i32 0)
  store i32 %44, i32* %9, align 4
  %45 = load i32, i32* %9, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %52

47:                                               ; preds = %23
  %48 = load i32, i32* @TAG, align 4
  %49 = call i32 @LOG_FMT(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %50 = call i32 @ESP_LOGD(i32 %48, i32 %49)
  %51 = load i32, i32* %9, align 4
  store i32 %51, i32* %4, align 4
  br label %54

52:                                               ; preds = %23
  %53 = load i32, i32* %9, align 4
  store i32 %53, i32* %4, align 4
  br label %54

54:                                               ; preds = %52, %47, %21, %15
  %55 = load i32, i32* %4, align 4
  ret i32 %55
}

declare dso_local i32 @httpd_valid_req(%struct.TYPE_6__*) #1

declare dso_local i32 @ESP_LOGD(i32, i32) #1

declare dso_local i32 @LOG_FMT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
